prod-camunda-mod-main@e452d573439/camunda-platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: camunda-platform
    istio-injection: disabled
  name: camunda-mod
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
