prod-camunda-mod-main@e452d573439/camunda-platform/connectors-deployment.yaml
# Source: camunda-platform/charts/connectors/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda-platform-connectors
  labels:
    app: camunda-platform
    app.kubernetes.io/name: connectors
    app.kubernetes.io/instance: camunda-platform
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: connectors

spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda-platform
      app.kubernetes.io/name: connectors
      app.kubernetes.io/instance: camunda-platform
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: camunda-platform
      app.kubernetes.io/component: connectors
  template:
    metadata:
      labels:
        app: camunda-platform
        app.kubernetes.io/name: connectors
        app.kubernetes.io/instance: camunda-platform
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: camunda-platform
        app.kubernetes.io/component: connectors
    spec:
      containers:
      - name: connectors
        image: "artifactory.apps.prod-nonpci-shared.nrapp.cloud/docker/camunda/connectors-bundle:0.15.0"
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 800m
            memory: 1Gi
          requests:
            cpu: 600m
            memory: 400Mi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/local/connectors/config/application.yml
          subPath: application.yml
        - name: root-ca
          mountPath: /certificates/tools.jks
          subPath: tools.jks
      volumes:
      - name: config
        configMap:
          name: camunda-platform-connectors
          defaultMode: 484
      - name: root-ca
        secret:
          secretName: root-ca
          defaultMode: 420
