prod-camunda-mod-main@e452d573439/camunda-platform/key-statefulset.yaml
# Source: camunda-platform/charts/identity/charts/keycloak/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
  labels:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: camunda-platform
  name: camunda-platform-keycloak
  namespace: camunda-mod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: keycloak
      app.kubernetes.io/name: keycloak
  serviceName: camunda-platform-keycloak-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/component: keycloak
        app.kubernetes.io/instance: camunda-platform
    spec:
      securityContext:
        fsGroup: null
      containers:
        - name: keycloak
          securityContext:
            runAsNonRoot: true
            fsGroup: null
            runAsUser: null
