prod-camunda-mod-main@e452d573439/camunda-platform/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: camunda
  namespace: camunda-mod
spec:
  host: camunda.apps.prod-nonpci-appdb.nrapp.cloud
  to:
    kind: Service
    name: camunda
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
